- GCE: Included fix for grouped calendars (Trello #1371)
- grup-classe: Removed option to select format of the calendar due to the changes in GCE v3.x (Trello #1034)
- New users: Fixed URL to change password, which was not being shown in email sent to new users
- blogger-importer: Fixed import of images (Trello #1340)
- xtec-booking: Added plugin for bookings of spaces or equipment (Trello #1166)
- Added role Professor (Trello #1166)
- Role Professor: Removed links to comments and tools (Trello #1354)
- Tools: Added custom tool boxes for timetables and events management. Removed bp and categories boxes (Trello #1342)
- buddypress-docs: Fixed upload of image using editor's menu option when creating a new document (Trello #1229)


Changes 16.09.07
---------------------------------------------------------------------------------------
- buddypress-docs: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)


Changes 16.08.22
---------------------------------------------------------------------------------------
- intranet-importer: Fixed import of images with capital letters in extensions
- intranet-importer: Added import of images uploaded using IWforms
- add-to-any: Show the same options to admins in Nodes and in XTECBlocs (Trello #1031)
- xtec: Added es_c_unsubtext field to fix site name in Email subscribers (Trello #1315)


Changes 16.07.20
---------------------------------------------------------------------------------------
- Fixed removal of users by admins (Trello #1298)


Changes 16.07.04
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.3 (Trello #1272)
- Reviewed embed support in kses to let contributors add Picasa web albums (Trello #1182)
- BuddyPress Group Email Subscription: Converted to submodule and updated to 3.6.1 (Trello #1042)
- buddypress-docs: Suggest labels when adding new documents (Trello #1228)